[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
